overall proportion fixed - there was an issue resulting in unwanted x-axis overflow

--- a/style.css
+++ b/style.css
@@ -22,13 +22,6 @@ main {
 }
 
 
-footer {
-    background-color: rgb(45, 45, 45);
-    position: fixed;
-    bottom: 0;
-    width: 100vw;
-    height: 70px;
-}
 
 
 
@@ -93,6 +86,7 @@ li {
 .icon-next-to-text {
     display: grid;
     grid-template-columns: 30px 1fr;
+    gap: 5px;
 }
 
 progress {
@@ -114,13 +108,8 @@ progress {
     padding: 10px 0 0 10px;
 }
 
-#general-menu {
-    height:140px;
-}
-#search-icon {
-    width: 30px;
-    height: 30px;
-    background-color: rgb(121, 120, 120);
+#general-menu ul {
+    padding: 5px 0;
 }
 
 #playlist-menu li{
@@ -133,10 +122,13 @@ progress {
     gap: 10px;
 }
 
+#new-playlist {
+    background-color: rgb(121, 120, 120);
+    height: 30px;
+}
+
 #create-playlist {
     display: inline-block;
-    width: fit-content;
-    height: fit-content;
     align-self: center;
     font-size: 13px;
     font-weight: 600;
@@ -144,8 +136,9 @@ progress {
 
 #side-menu footer {
     bottom: 80px;
-    height: fit-content;
     padding: 5px 0;
+    position: fixed; 
+    bottom: 84px;
 }
 
 #download-app img {
@@ -163,11 +156,6 @@ progress {
     1px solid grey;
     display: grid;
     grid-template-columns: 12px 1fr;
-}
-
-#profile h4,
-#download-app p {
-    padding-left: 5px;
 }
 
 
@@ -238,11 +226,14 @@ button {
 button > h3 {
     color: white;
 }
+
+
 /*MAIN CONTENT NAVIGATION*/
 
 #main-content {
-    margin-left: 200px;
+    width: calc(100vw - 200px);
     position: relative;
+    margin-left: 170px;
 }
 
 #categories-menu {
@@ -250,41 +241,32 @@ button > h3 {
     position: fixed;
     background-color: rgb(28, 28, 34);   
     top: 80px;
+    left: 190px;
     z-index: 1;
 }
 
-#main-content> header > nav{
-    height: 100%;
-}
-
-#main-content> header > nav > ul{
-    height: 100%;
-    width: calc(100vw - 200px);
-    display: inline-block;
-}
-
-
-#main-content li {
-    display: inline-block;
+#categories-menu li {
+    display: inline-block; 
     margin: 0 12px 0 0;
 }
 
 /*MAIN CONTENT DISPLAY*/
 
 #display-content {
-    width: calc(100vw - 200px);
+    width: calc(100vw - 190px);
     padding-top: 140px;
-}
-
-.category {
-    width: 100%;
 }
 
 .playlists-container {
     padding-top: 20px;
+    padding-left: 20px;
     display: grid;
     grid-template-columns:repeat(auto-fit, 140px);
     gap: 30px 10px;
+}
+
+.category-header {
+    padding-left: 20px;
 }
 
 .album {
@@ -325,8 +307,14 @@ button > h3 {
 /* FOOTER */
 
 #main-footer {
+    background-color: rgb(45, 45, 45);
+
+    position: fixed;
+    bottom: 0;
+
     padding: 5px;
-    width: calc(100vw - 20px);
+    width: calc(100vw - 10px);
+
     display: grid;
     grid-template-columns: 200px 1fr 200px;
     z-index: 1;
@@ -374,6 +362,42 @@ color: white;
 
 #volume {
     width: 80px;
+}
+
+
+
+/* :hover AND :active  */
+
+.hover-underlined,
+.hover-side-border {
+    position: relative;
+}
+
+.hover-underlined:hover h3:after{
+    /* adapted from the solution Nathan posted */
+    content: "";
+    display: block;
+    background: rgb(103, 247, 255);
+    position: absolute;
+    width: 60%;
+    height: 2px;
+    bottom: -5px;
+    left: 20%;
+}
+
+.hover-side-border:hover h4 {
+    color: white;
+}
+
+.hover-side-border:hover ::after{
+    /* adapted from the solution Nathan posted */
+    content: "";
+    display: block;
+    background: rgb(103, 247, 255);
+    position: absolute;
+    height: 100%;
+    left: -8px;
+    width: 2px;
 }
 
 
